## ##########################################################################
##
## File:	Makefile.am
##
## Purpose:	Run automake at the top level to make Makefile.in in all
##		subdirectories.
##
## Version:	$Id: Makefile.am 2205 2004-09-03 22:58:18Z sizemore $
##
## Copyright 2004 Tech-X Coporation.  All rights reserved.
##
## ##########################################################################

EXTRA_DIST	= beamplasmatest.inp dcdis.inp deposition.inp dring.inp \
	fowler_nordheim_emit.inp gas.inp klystron.inp loasisHe.inp \
	waveguideTE.inp waveguideTM.inp xybeam.inp WeibelTest.inp \
	two_stream_ee_em.inp two_stream_ee_es.inp

data_DATA	= $(EXTRA_DIST)

datadir		= $(prefix)/oopicpro/input

